# model-mail

./: .gitignore  README.md  pyproject.toml
docs/planning/: v1.md
src/: asgi.py
src/model_mail/: application.py
src/model_mail/config/: configurations.py
src/model_mail/mailing/: __init__.py  incoming_emails.py
src/model_mail/storage/models/: thread.py  user.py
src/model_mail/superficial/strings/: EN_US.py
