[project]
name = "model-mail"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Cam", email = "cammclain@skiff.com"},
]
dependencies = [
    "rich>=13.7.1",
    "twisted>=24.3.0",
    "pydantic>=2.8.2",
    "python-dotenv>=1.0.1",
    "aiosmtplib>=3.0.2",
    "sqlalchemy>=2.0.32",
    "advanced-alchemy>=0.19.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
